data/all_generated_tests/raw_wast_tests/call_IncorrectHandlingofControlFlowAcrossModuleBoundaries_3827.wast
;; 6. **Calling Imported Function in a Loop**:    - **Description**: Execute a loop within one module that repeatedly calls a function imported from another module, and ensure that the control flow remains consistent during each iteration.    - **Constraint**: Loop control flow must not corrupt the stack.    - **Relation**: Tests if repeated imports in a loop across module boundaries maintain correct execution flow.

(assert_invalid
  (module
    (import "env" "external_func" (func $external (param i32) (result i32)))
    (func $loop-calling-external (param i32) (result i32)
      (local $counter i32)
      (block $loop
        (loop $again
          (local.set $counter (call $external (local.get 0)))
          (br_if $loop (i32.ne (local.get $counter) (i32.const 0)))
          (br $again)
        )
      )
    )
  )
  "type mismatch"
)